creating own promises

--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
 <main class="container">
     <div class="countries">
     </div>
+    <h2>Search country anf neighbour by coordinates!</h2>
     <form>
         <label for="latitude">Enter latitude (Ex. 52.508)</label>
-        <input type="text" id="latitude">
+        <input type="text" id="latitude" placeholder="Enter latitude here ...">
         <label for="longitude">Enter latitude (Ex. 13.381)</label>
-        <input type="text" id="longitude">
+        <input type="text" id="longitude" placeholder="Enter longitude here ...">
         <button type="submit">SEARCH</button>
     </form>
 </main>
