implement getCurrentPosition from user browser

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 <main class="container">
     <div class="countries">
     </div>
-    <h2>Search country anf neighbour by coordinates!</h2>
+    <div class="message">
+    </div>
+    <h2>Search country and neighbour by coordinates!</h2>
     <form>
         <label for="latitude">Enter latitude (Ex. 52.508)</label>
         <input type="text" id="latitude" placeholder="Enter latitude here ...">
@@ -22,6 +24,12 @@
         <input type="text" id="longitude" placeholder="Enter longitude here ...">
         <button type="submit">SEARCH</button>
     </form>
+    <div id="btn-user-search">
+        <label for="longitude">... or use button bellow ...</label>
+        <button class="btn-country">WHERE AM I?</button>
+    </div>
+
+
 </main>
 </body>
 
