--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
     <link rel="stylesheet" href="style.css"/>
-    <script defer src="dist/src/app.js" type="module"></script>
+    <script defer src="dist/bundle.js" type="module"></script>
     <title>Asynchronous JavaScript / Typescript</title>
 </head>
 
